[gd_scene load_steps=2 format=3 uid="uid://npc_entity_scene_001"]

[ext_resource type="Script" path="res://scripts/npcs/npc_controller.gd" id="1_controller"]

[sub_resource type="CircleShape2D" id="CircleShape2D_interaction"]
radius = 64.0

[node name="NPC" type="CharacterBody2D" groups=["npc"]]
script = ExtResource("1_controller")

[node name="Sprite" type="ColorRect" parent="."]
offset_left = -12.0
offset_top = -20.0
offset_right = 12.0
offset_bottom = 4.0
color = Color(0.5, 0.5, 0.8, 1)

[node name="NameLabel" type="Label" parent="."]
offset_left = -40.0
offset_top = -35.0
offset_right = 40.0
offset_bottom = -22.0
text = "NPC Name"
horizontal_alignment = 1
vertical_alignment = 1

[node name="InteractionArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="InteractionArea"]
shape = SubResource("CircleShape2D_interaction")

[node name="AnimationTimer" type="Timer" parent="."]
wait_time = 2.0
autostart = true

[connection signal="body_entered" from="InteractionArea" to="." method="_on_interaction_area_body_entered"]
[connection signal="body_exited" from="InteractionArea" to="." method="_on_interaction_area_body_exited"]
[connection signal="timeout" from="AnimationTimer" to="." method="_on_animation_timer_timeout"]
